# zimler

./: .gitignore  Cargo.toml  LINTING.md  Makefile  PROJECT_PLAN.md  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
assets/: .gitignore
core/zimler-dsp/: Cargo.toml
core/zimler-dsp/src/: filters.rs  lib.rs  resampler.rs
core/zimler-engine/: Cargo.toml
core/zimler-engine/src/: api.rs  envelope.rs  lib.rs  mixer.rs  sample.rs  voice.rs
core/zimler-midi/: Cargo.toml
core/zimler-midi/src/: lib.rs
desktop/: .gitignore
desktop/zimler-desktop/: Cargo.toml
desktop/zimler-desktop/src/: audio_backend.rs  main.rs  ui.rs
ios/: .gitignore
tools/: generate_test_samples.rs
