[workspace]
resolver = "2"
members = [
    "core/zimler-engine",
    "core/zimler-dsp",
    "core/zimler-midi",
    "desktop/zimler-desktop",
]

[workspace.package]
version = "0.1.0"
authors = ["Navicore"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Bevy - MIT OR Apache-2.0
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "wayland",
    "x11",
    "multi_threaded",
]}

# Audio - All Apache-2.0 or MIT
cpal = "0.15"              # Apache-2.0
dasp = "0.11"              # MIT OR Apache-2.0
rubato = "0.16"            # MIT
hound = "3.5"              # Apache-2.0 (WAV file I/O)

# MIDI - MIT
midir = "0.10"             # MIT

# Math/DSP - MIT OR Apache-2.0
nalgebra = "0.33"          # Apache-2.0
num-complex = "0.4"        # MIT OR Apache-2.0
realfft = "3.3"            # MIT OR Apache-2.0

# Utilities - MIT OR Apache-2.0
crossbeam = "0.8"          # MIT OR Apache-2.0
parking_lot = "0.12"       # MIT OR Apache-2.0
bytemuck = "1.16"          # MIT OR Apache-2.0 OR Zlib
anyhow = "1.0"             # MIT OR Apache-2.0
thiserror = "1.0"          # MIT OR Apache-2.0

# Serialization - MIT OR Apache-2.0
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"            # MIT
rmp-serde = "1.3"          # MIT

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3  # Dependencies optimized even in dev